terminado index.html

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   </div>
   <div class="login-form">
     <h3>Username:</h3>
-    <input id="usuario" type="email" placeholder="Username"/><br>
+    <input id="usuario" type="text" placeholder="Username"/><br>
     <span id="alerta"></span>
 		<h3>Password:</h3>
-    <input type="password" placeholder="Password"/>
+    <input type="password" id="contra" placeholder="Password"/>
     <span id="error"></span>
     <br>
-    <input id="contra" type="submit" value="Sign In" class="button"/>
+    <input  type="submit" value="Sign In" class="button"/>
 
 </form>
 </div>
